2016-01-09 Loic Valery <lvalery@cern.ch>
        * Moved StatOnly flag from Fit to Job block

2016-01-08 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixing problems with reference systematics & one-sided symmetrisation
        * ConfigParser: spaces before % now allowed
        
2016-01-08 Thomas Calvet <calvet@cppm.in2p3.fr>
	* Modification if the Binning option is set, NTuple are directly turned in histograms with the specified binning (remove the rebin step to avoid edge problems).
	* Adding AutoBin option for Binning (Binning: "AutoBin","TransfoD",1.,5.).
	* Adding two transformation ("TransfoD","TransfoF") for binning. Each of them requires two parameters.
	* Adding string to double conversion function, with exception protection (try-catch) and protection for incomplete convertion (52f8 -> 52 will crash). Used in the options added here, can be propagated to all conversions.
	
2015-12-18 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixing signal draw options
        * Updating documentation
        * tex tables automatic creating added (by Marine)
        * Svn-Tagging: 00-01-01
        
2015-12-16 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Option added to specify a list of regions where to apply each syst. See option Regions under Systematic (also Exclude should work - to exclude both for regions and sample)
        * Added few optins for signal in plots (NOSIG, OVERSIG)

2015-12-11 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Command-line option "Signal" added: e.g.  ./myFit.exe  wl  config/myconfig.config  'Signal=signalA:Suffix=_A'
        * Fixed limit when having a suffix
        * MC stat uncertinaty in post-fit tables fixed

2015-12-10 Michele Pinamonti <michele.pinamonti@gmail.com>
        * ReferenceSample option fixed (relative overall normalization variation kept)
        * Image format propagated to syst plots, and now possible to specify more than one (e.g. eps,png)