@@ -128,6 +128,7 @@ Here's a list of the inputs and options which can be specifed in the config file
       FitBlind         -> specify is real data or Asimov data should be used in the fit (TRUE or FALSE). By default, fit are NOT blind.
       POIAsimov        -> value of the parameter of interest in the AsimovDataset used in the fit
       NPValues         -> values of the nuisance parameters used to build the fit. Coma-separated list of NP:value (e.g. alpha_ttbarbb_XS:1,alpha_ttbarbcc_XS:1.5)
+      doLHscan         -> name of the POI or NP from which you want to produce the likelihood scan
 
     Limit:
       LimitType        -> can be ASYMPTOTIC or TOYS (the latter is not yet supported)
@@ -248,5 +249,6 @@ Output Directories Structure
    Significance/       -> contains the outputs from the significance code
    Systematics/        -> contains the plots for the syst variations
    Histograms/         -> contains the root file(s) with all the inputs
+   LHoodPlots/         -> contains the likelihood scan with respect to the specified parameter
 
    
